# Telegram-bot

./: .env  .env.example  .env.local  .gitignore  App.tsx  Cargo.toml  DEPLOYMENT.md  Dockerfile  HOSTING_GUIDE.md  QUICK_START.md  README.md  bot.py  bot_telegram.py  config.py  database.py  index.html  main.py  main.rs  metadata.json  mexc_handler.py  package.json  render.yaml  requirements.txt  rest_api_handler.py  server.js  start.sh  strategy.py  telegram_bot.py  telegram_handler.py  test_push.txt  test_validation.py  trading_logic.py  types.ts  websocket_handler.py
components/: ChatMessageComponent.tsx  CodeEditor.tsx  StatusPanel.tsx  Terminal.tsx
services/: geminiService.ts
