[package]
name = "omega_royal"
version = "2.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
dotenv = "0.15"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
url = "2.4"
chrono = "0.4" 